add off autocomplete on input

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
 
           <div class="search">
-            <input type="text" name="text" id="text" placeholder="Buscar">
+            <input type="text" name="text" id="text" placeholder="Buscar" autocomplete="off">
             <button>
               <img src="./assets/search.svg" alt="Ícone de pesquisar">
             </button>
